# cpp-depmgr

./: CMakeLists.txt  README.md
.github/setup/: linux-build.sh
.github/workflows/: main.yml
src/: cmake.cpp  cmake.hpp  main.cpp  platform_info.h  state.hpp  toml.hpp  util.cpp  util.hpp
